--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "mongodb": "^6.12.0",
     "next": "^15.1.2",
     "postcss": "^8.4.49",
     "react": "^18.2.0",
