--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
   "dependencies": {
     "mongodb": "^6.12.0",
     "next": "^15.1.2",
-    "postcss": "^8.4.49",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.17"
   }
 }
